# sprint-01-ai-engineering-bootcamp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
evals/: eval_retriever.py
notebooks/: 02-RAG-Preprocessing.ipynb
python3.12/: main.py
src/chatbot_ui/: retrieval.py  streamlit_app.py
src/chatbot_ui/core/: config.py
